--- a/game.css
+++ b/game.css
@@ -83,3 +83,16 @@ video {
     width: 434px !important;
     height: auto !important;
 }
+
+.turn {
+  font-family: 'Creepster', 'sans-serif';
+    font-size: 4.5rem;
+    letter-spacing: 0.25rem;
+
+}
+
+
+.ghost {
+  width: 80px;
+  margin:0   10rem;
+}
